# amspy

./: .gitignore  main.py  pyproject.toml
_notes/: architecture.txt  deployment.txt  running_locally  running_locally.txt
_notes/SQL/: functions.sql  seed.sql  tables_ddl.sql
app/: main.py  models.py
app/services/auth/: dal.py  htmx.py
public/: faq.html
public/css/: main.css
public/js/: main.js
services/auth/: api.py
services/auth/templates/: password_reset_form.html
templates/auth/: login-form.html
