[project]
name = "amspy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14.2"
dependencies = [
    "fastapi[standard]>=0.128.0",
    "jinja2>=3.1.6",
    "mangum>=0.20.0",
    "psycopg[binary]>=3.3.2",
    "python-dotenv>=1.2.1",
    "sqlmodel>=0.0.31",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
